{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 221,
  "lineage": "669d3880-03a0-7d2f-1a4c-1862ab58d6fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:298201989956:route-table/rtb-0345a078a7549dfe2",
            "default_route_table_id": "rtb-0345a078a7549dfe2",
            "id": "rtb-0345a078a7549dfe2",
            "owner_id": "298201989956",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004919774b57647c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routing_table"
            },
            "tags_all": {
              "Name": "routing_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d58120a7cadec69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:298201989956:internet-gateway/igw-004919774b57647c4",
            "id": "igw-004919774b57647c4",
            "owner_id": "298201989956",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-04d58120a7cadec69"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:298201989956:loadbalancer/app/test-lb-tf/607ccc215fb7c1bb",
            "arn_suffix": "app/test-lb-tf/607ccc215fb7c1bb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-1314106677.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:298201989956:loadbalancer/app/test-lb-tf/607ccc215fb7c1bb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0c3195c37e4582d04"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02a4373f90aea4f3e"
              },
              {
                "subnet_id": "subnet-096fa91d6efbfdf52"
              }
            ],
            "subnets": [
              "subnet-02a4373f90aea4f3e",
              "subnet-096fa91d6efbfdf52"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-04d58120a7cadec69",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_security_group.allow_tls",
            "aws_subnet.subnet",
            "aws_subnet.subnet1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:298201989956:listener/app/test-lb-tf/607ccc215fb7c1bb/94da6db003d057d3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:298201989956:targetgroup/testLambda/1205cd5a312822fd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:298201989956:listener/app/test-lb-tf/607ccc215fb7c1bb/94da6db003d057d3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:298201989956:loadbalancer/app/test-lb-tf/607ccc215fb7c1bb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw1",
            "aws_lb.test",
            "aws_lb_target_group.front_end",
            "aws_security_group.allow_tls",
            "aws_subnet.subnet",
            "aws_subnet.subnet1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:298201989956:targetgroup/testLambda/1205cd5a312822fd",
            "arn_suffix": "targetgroup/testLambda/1205cd5a312822fd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": false,
                "healthy_threshold": 5,
                "interval": 35,
                "matcher": "200",
                "path": "/",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:298201989956:targetgroup/testLambda/1205cd5a312822fd",
            "lambda_multi_value_headers_enabled": false,
            "name": "testLambda",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
              }
            ],
            "target_type": "lambda"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:298201989956:targetgroup/testLambda/1205cd5a312822fd-20220302124706856900000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:298201989956:targetgroup/testLambda/1205cd5a312822fd",
            "target_id": "arn:aws:lambda:eu-north-1:298201989956:function:lambda_task"
          },
          "dependencies": [
            "aws_iam_role.lambda_role2",
            "aws_lambda_function.test_lambda",
            "aws_lambda_layer_version.lambda_layer",
            "aws_lambda_permission.with_lb",
            "aws_lb_target_group.front_end",
            "aws_security_group.allow_tls",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "route_table_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf903205dbe2eb43",
            "original_route_table_id": "rtb-0345a078a7549dfe2",
            "route_table_id": "rtb-0345a078a7549dfe2",
            "vpc_id": "vpc-04d58120a7cadec69"
          },
          "dependencies": [
            "aws_default_route_table.route_table",
            "aws_internet_gateway.gw1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:298201989956:security-group/sg-0c3195c37e4582d04",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3195c37e4582d04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "298201989956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d58120a7cadec69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:298201989956:subnet/subnet-096fa91d6efbfdf52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.1.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096fa91d6efbfdf52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "298201989956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-04d58120a7cadec69"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:298201989956:subnet/subnet-02a4373f90aea4f3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.1.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a4373f90aea4f3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "298201989956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main1"
            },
            "tags_all": {
              "Name": "Main1"
            },
            "vpc_id": "vpc-04d58120a7cadec69"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:298201989956:vpc/vpc-04d58120a7cadec69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0da8ec3b011ebe279",
            "default_route_table_id": "rtb-0345a078a7549dfe2",
            "default_security_group_id": "sg-08ec12c585d684633",
            "dhcp_options_id": "dopt-099a8720212892955",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04d58120a7cadec69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0345a078a7549dfe2",
            "owner_id": "298201989956",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}